--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-native-webview": "^9.4.0",
+    "react-player": "^2.0.1",
     "react-scripts": "3.4.1"
   },
   "scripts": {
